--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     }
   },
   "require": {
-    "mpdf/qrcode": "^1.1"
+    "mpdf/qrcode": "^1.1",
+    "guzzlehttp/guzzle": "^7.0",
+    "vlucas/phpdotenv": "^5.3"
   }
 }
