--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
   "name" : "qrcode/pix",
   "autoload" : {
     "psr-4" : {
-      "App\\" : "app/"
+      "Pix\\Sdk\\" : "src/"
     }
   },
   "require": {
     "mpdf/qrcode": "^1.1",
-    "guzzlehttp/guzzle": "^7.3",
-    "vlucas/phpdotenv": "^5.3"
+    "vlucas/phpdotenv": "^5.3",
+    "curl/curl": "^2.3"
   }
 }
